rework blog into portfolio

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,9 +6,27 @@ import Layout from '../layouts/BlogPost.astro';
 	title="About Me"
 	description="About Alejandro Abaroa, a software engineer with a passion for design, UI/UX, and building products that people love."
 	pubDate={new Date('January 28 2026')}
-	heroImage="/blog-placeholder-about.jpg"
+	heroImage="/about-me.jpg"
 >
 	<p>
-		Text goes here.
+		Hello! In case you want to know more about me, here's a bit of my background:
+		<ul>
+			<li>Born and raised in Tijuana, Mexico.</li>
+			<li>I live in the San Diego, CA area.</li>
+			<li>I have a Bachelor's in Computer Engineering and a Master's in Graphic Design.</li>
+			<li>I've worked at companies like Upsun, Samsung Electronics, and Thermo Fisher.</li>
+		</ul>
+	</p>
+	<p>
+		Some of my favorite things to do are:
+		<ul>
+			<li>I love concerts and concert photography, sadly it's been getting more and more expensive to keep this hobby.</li>
+			<li>Gaming: I love RPGs like Disco Elysium and Expedition 33</li>
+			<li>Cooking and watching youtube cooking videos (watching videos)</li>
+			<li>Dabble a bit of photography, I love my wide angle lens</li>
+			<li>I have a massive love for any consumer electronics that Sony made, especially in the 2000s</li>
+			<li>Traveling: I've been lucky enough to visit parts of Mexico, Japan, Korea and Europe</li>
+			<li>Also dabble a bit into audiophile territory: I love my IEMs and open back headphones.</li>
+		</ul>
 	</p>
 </Layout>
