--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,8 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
-			<HeaderLink href="/portfolio">Portfolio</HeaderLink>
+			<HeaderLink href="/portfolio">Code</HeaderLink>
+			<HeaderLink href="/portfolio/design">Design</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://github.com/mexicanrobot/" target="_blank">
